kubernetes/test-django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deploy
  labels:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/component: test
    tier: backend
    owner: imago
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: django-app
      app.kubernetes.io/component: test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django-app
        app.kubernetes.io/component: test
        tier: backend
        owner: imago
    spec:
      containers:
        - name: django-app
          imagePullPolicy: IfNotPresent
          image: django-app:latest
          ports:
          - containerPort: 80
            name: http
