kubernetes/test-django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-deploy-service
  labels:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/component: test
spec:
  type: NodePort
  ports:
    - name: external-port
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: django-app
    app.kubernetes.io/component: test
